2006-08-28 [paul]	0.6.0cvs10

	* po/remove-potcdate.sin
	* po/stamp-po
		add missing files

2006-08-28 [paul]	0.6.0cvs9

	* configure.ac
	* src/Makefile.am
	* src/plugin.c
		fix setting of localedir
		Thanks to Colin

2006-08-28 [paul]	0.6.0cvs8

	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
	* src/plugin.c
		require autoconf 2.60, enabling building
		with gettext 0.15 (gettext 0.14.x build still
		possible). Replace Makefiles with versions
		from gettext 0.15.

2006-08-27 [colin]	0.6.0cvs7

	* src/rssyl.c
	* src/rssyl_cb_menu.c
	* src/rssyl_cb_menu.h
	* src/rssyl_gtk.c
		Allow arbitrary folder hierarchy, and normal folders
		with no subscriptions to store other folders

2006-08-27 [colin]	0.6.0cvs6

	* src/plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	0.6.0cvs5

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-17 [colin]	0.6.0cvs4

	* src/feed.c
	* src/feed.h
		Don't check SSL certificate (CURL default changed since 7.10)
		Better error report

2006-08-17 [colin]	0.6.0cvs3

	* src/feed.c
		Fix header encoding - header_len is the length
		of the prefixing header name, like 'Subject: ',
		not the actual content's length. Fixes infinite
		loops in codeconversion.

2006-08-08 [paul]	0.6.0cvs2

	* src/feed.h
		fix non-translation of strings
	* src/rssyl_cb_menu.c
		use gettext plural forms

	Both patches by "Fabien Vantard" <fzzzzz@gmail.com>

2006-08-03 [colin]	0.6.0cvs1

	* src/feed.c
		Add base href header for use in Dillo 
		or gtkhtml2_viewer

2006-08-02 [paul]	0.6.0

	0.6 released

2006-07-02 [ticho]	0.5.0cvs10

	* src/feed.c
	* src/feed.h
		Remove curltmpXXXXXX file at another code path.
		Announce feed updates in log window.					

2006-07-02 [ticho]	0.5.0cvs9

	* src/feed.c
	* src/feed.h
		Remove curltmpXXXXXX file at another code path.
		Announce feed updates in log window.

2006-07-02 [wwp]	0.5.0cvs9

	* src/rssyl_prefs.c
		Typo.

2006-07-02 [ticho]	0.5.0cvs8

	* po/sk.po
	* src/feed.h