@@ -27,3 +27,4 @@
 ( cvs diff -u -r 1.1.2.73 -r 1.1.2.74 configure.ac;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/Makefile.in.in;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/Makevars;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/plugin.c;  ) > 0.6.0cvs8.patchset
 ( cvs diff -u -r 1.1.2.74 -r 1.1.2.75 configure.ac;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/Makefile.am;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/plugin.c;  ) > 0.6.0cvs9.patchset
 ( diff -u /dev/null po/remove-potcdate.sin;  diff -u /dev/null po/stamp-po;  ) > 0.6.0cvs10.patchset
+( cvs diff -u -r 1.1.2.45 -r 1.1.2.46 src/feed.c;  ) > 0.6.0cvs11.patchset
