@@ -1,3 +1,8 @@
+2006-08-28 [ticho]	0.6.0cvs11
+
+	* src/feed.c
+		Inform user if the feed seems to be malformed.
+
 2006-08-28 [paul]	0.6.0cvs10
 
 	* po/remove-potcdate.sin
